making the system

--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,5 @@
-COMFYUI_API_URL = "api_one,api_two"
+MACHINE_LIST = "machine1,machine2,"
+REDIS_URL=redis://localhost:6379
+
+# ComfyUI Server URL
+COMFYUI_API_URL=http://your-comfyui-server:8188
