--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,9 @@
-MACHINE_LIST = "machine1,machine2,"
-REDIS_URL=redis://localhost:6379
+MACHINE_LIST = "machine_one,machine_two,"
+WEBHOOK_URL = ""
+REDIS_URL= ""
 
-# ComfyUI Server URL
-COMFYUI_API_URL=http://your-comfyui-server:8188
+R2_ACCESS_KEY_ID = ""
+R2_SECRET_ACCESS_KEY = ""
+R2_BUCKET_NAME = ""
+ENDPOINT = ""
+
