--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "hono": "^4.10.6",
-    "ioredis": "^5.8.2"
+    "ioredis": "^5.8.2",
+    "music-metadata": "^11.10.3"
   }
 }
